[#11] 학교 생성 및 권한 설정
